# ghistory

./: .buildconfig  AUTHORS  README.md  meson.build  run.sh
data/: Application.css  com.github.padjis.ghistory.appdata.xml.in  com.github.padjis.ghistory.desktop.in  com.github.padjis.ghistory.gresource.xml  ghistory.xcf  meson.build
debian/: changelog  control  copyright
po/: POTFILES
po/extra/: POTFILES
src/: Application.vala  Main.vala  meson.build
src/Window/: Window.vala
src/util/: History.vala
src/widgets/: HeaderBar.vala
src/widgets/button/: SearchButton.vala
src/window/: Window.vala
